--- a/src/views/13-page.html
+++ b/src/views/13-page.html
@@ -94,7 +94,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="service__column service__column--editable service__column--8">
+                                    <div class="service__column service__column--editable service__column--sm-desktop-full service__column--8">
                                         <div class="grid__block mobile-order mobile-order--9">
                                             <div class="service-table">
                                                 <p class="title-small title-small--product service-table__title">
