--- a/src/views/2-page.html
+++ b/src/views/2-page.html
@@ -35,7 +35,7 @@
                             </h2>
                             <div class="articles single__offers">
                                 <article href="" class="card">
-                                    <a href class="card__thumb resized">
+                                    <a href class="card__thumb">
                                         <div class="card__tags"></div>
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
