--- a/src/views/4-page.html
+++ b/src/views/4-page.html
@@ -82,7 +82,7 @@
                             <div class="catalog__articles articles">
 
                                 <article class="card">
-                                    <a href class="resized card__thumb">
+                                    <a href class="card__thumb">
                                         <div class="card__tags"></div>
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
@@ -166,7 +166,7 @@
                                 </article>
 
                                 <article class="card">
-                                    <a href class="resized card__thumb">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--blue">
@@ -252,7 +252,7 @@
                                 </article>
 
                                 <article class="card">
-                                    <a href class="resized card__thumb">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--orange">
@@ -338,7 +338,7 @@
                                 </article>
 
                                 <article class="card">
-                                    <a href class="resized card__thumb">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--red">
@@ -424,7 +424,7 @@
                                 </article>
 
                                 <article class="card">
-                                    <a href class="resized card__thumb">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
@@ -505,7 +505,7 @@
                                 </article>
 
                                 <article class="card">
-                                    <a href class="resized card__thumb">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--orange">
@@ -591,7 +591,7 @@
                                 </article>
 
                                 <article class="card">
-                                    <a href class="resized card__thumb">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--red">
