--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -6100,7 +6100,7 @@ i {
 }
 
 .table__cell {
-  padding: 20px 4px;
+  padding: 10px 4px;
   box-sizing: border-box;
   flex-shrink: 1;
 }
@@ -7197,6 +7197,7 @@ i {
 
 .lk-filter__btn {
   height: 40px;
+  min-height: 40px;
   padding-left: 30px;
   padding-right: 30px;
 }
@@ -7655,12 +7656,16 @@ i {
 }
 
 .modal-menu {
-  background-color: #ffffff;
   min-height: 120vh;
   padding-bottom: 50px;
   position: relative;
   display: block;
   width: 100%;
+}
+
+.modal-menu__container {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .modal-menu__main-title {
@@ -7713,9 +7718,8 @@ i {
 
 .modal-menu__nav {
   background-color: #000000;
-  margin-bottom: 35px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  margin-bottom: 30px;
+  padding: 15px 70px 15px 30px;
 }
 
 .modal-write {
@@ -7751,7 +7755,6 @@ i {
 }
 
 .fancybox-container--menu .fancybox-content {
-  width: 100%;
   padding: 0px;
 }
 
@@ -10543,10 +10546,6 @@ i {
   margin-right: 22px;
 }
 
-.card__btn span {
-  text-transform: uppercase;
-}
-
 .service__grid {
   display: flex;
   justify-content: space-between;
@@ -11400,6 +11399,17 @@ path {
     height: 480px;
   }
 
+  .marker-block svg {
+    margin-right: 12px;
+    width: 26px;
+    height: 26px;
+  }
+
+  .marker-block span,
+  .marker-block a {
+    font-size: 16px;
+  }
+
   .table__line {
     font-size: 14px;
   }
@@ -11694,6 +11704,10 @@ path {
     width: calc(25% - 10px);
   }
 
+  .service__column--sm-desktop-full {
+    width: 100%;
+  }
+
   .map__slider {
     height: 600px;
   }
@@ -11875,6 +11889,10 @@ path {
   .pagination__counter {
     margin-left: 20px;
     margin-right: 20px;
+  }
+
+  .table a {
+    text-decoration: underline;
   }
 
   .table__line:nth-child(2n) {
@@ -12087,6 +12105,66 @@ path {
   .lk-table-toolbar__col--result {
     padding: 0px;
     width: 200px;
+  }
+
+  .lk-order__line {
+    display: block;
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+
+  .lk-order__line--head {
+    display: flex;
+  }
+
+  .lk-order__col {
+    min-height: auto;
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+
+  .lk-order__col--number {
+    width: auto;
+    min-width: 35px;
+  }
+
+  .lk-order__col--info {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .lk-order__col--grow {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .lk-order__col--person {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .lk-order__col--date {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .lk-order__col--count {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .lk-order__col--status {
+    padding-left: 16px;
+    padding-right: 16px;
+    width: auto;
+  }
+
+  .lk-order__text strong {
+    display: block;
+  }
+
+  .lk-filter {
+    display: none;
   }
 
   .accent-line {
