--- a/src/blocks/modules/catalog/catalog.scss
+++ b/src/blocks/modules/catalog/catalog.scss
@@ -1097,8 +1097,8 @@
 			display: block;
 			margin-right: 22px;
 		}
-		span {
-			text-transform: uppercase;
-		}
+		// span {
+		// 	text-transform: uppercase;
+		// }
 	}
 }
