--- a/src/blocks/modules/modal/modal.scss
+++ b/src/blocks/modules/modal/modal.scss
@@ -1,11 +1,15 @@
 .modal-menu {
-	background-color: $light;
+	// background-color: $light;
 	min-height: 120vh;
 	// padding-top: 100px;
 	padding-bottom: 50px;
 	position: relative;
 	display: block;
 	width: 100%;
+	&__container {
+		padding-left: 0px;
+		padding-right: 0px;
+	}
 	&__main-title {
 		margin-bottom: 20px;
 	}
@@ -47,9 +51,8 @@
 	}
 	&__nav {
 		background-color: $black;
-		margin-bottom: 35px;
-		padding-top: 15px;
-		padding-bottom: 15px;
+		margin-bottom: 30px;
+		padding: 15px 70px 15px 30px;
 	}
 }
 
@@ -91,7 +94,7 @@
 .fancybox-container {
 	&--menu {
 		.fancybox-content {
-			width: 100%;
+			// width: 100%;
 			padding: 0px;
 		}
 
