--- a/src/blocks/modules/service/service.scss
+++ b/src/blocks/modules/service/service.scss
@@ -19,6 +19,11 @@
 		&--8 {
 			width: calc(100% / 10 * 8 - 16px);
 		}
+		&--sm-desktop-full {
+			@include r(1700) {
+				width: 100%;
+			}
+		}
 	}
 	&__ill {
 		display: block;
