--- a/src/styles/base/_lk-ui.scss
+++ b/src/styles/base/_lk-ui.scss
@@ -896,8 +896,16 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		@include r(1200) {
+			display: block;
+			padding-top: 8px;
+			padding-bottom: 8px;
+		}
 		&--head {
 			background-color: #F9F9F9;
+			@include r(1200) {
+				display: flex;
+			}
 		}
 	}
 	&__col {
@@ -905,18 +913,31 @@
 		flex-shrink: 0;
 		padding-top: 16px;
 		padding-bottom: 16px;
+		@include r(1200) {
+			min-height: auto;
+			padding-top: 8px;
+			padding-bottom: 8px;
+		}
 		&--number {
 			border-right: 1px solid #E5E5E5;
 			width: 50px;
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			@include r(1200) {
+				width: auto;
+				min-width: 35px;
+			}
 		}
 		&--info {
 			padding-left: 52px;
 			padding-right: 52px;
 			display: flex;
 			align-items: center;
+			@include r(1200) {
+				padding-left: 16px;
+				padding-right: 16px;
+			}
 			a {
 				color: $green;
 				font-weight: bold;
@@ -930,24 +951,40 @@
 			min-width: 0px;
 			flex-grow: 1;
 			flex-shrink: 1;
+			@include r(1200) {
+				padding-left: 16px;
+				padding-right: 16px;
+			}
 		}
 		&--person {
 			padding-left: 103px;
 			padding-right: 32px;
 			display: flex;
 			align-items: center;
+			@include r(1200) {
+				padding-left: 16px;
+				padding-right: 16px;
+			}
 		}
 		&--date {
 			padding-left: 32px;
 			padding-right: 32px;
 			display: flex;
 			align-items: center;
+			@include r(1200) {
+				padding-left: 16px;
+				padding-right: 16px;
+			}
 		}
 		&--count {
 			display: flex;
 			align-items: center;
 			padding-left: 32px;
 			padding-right: 32px;
+			@include r(1200) {
+				padding-left: 16px;
+				padding-right: 16px;
+			}
 		}
 		&--status {
 			display: flex;
@@ -956,11 +993,19 @@
 			padding-right: 32px;
 			text-align: center;
 			width: 164px;
+			@include r(1200) {
+				padding-left: 16px;
+				padding-right: 16px;
+				width: auto;
+			}
 		}
 	}
 	&__text {
 		strong {
 			color: #828282;
+			@include r(1200) {
+				display: block;
+			}
 		}
 		b {
 			font-weight: bold;
@@ -984,6 +1029,9 @@
 	margin-bottom: 43px;
 	display: flex;
 	align-items: center;
+	@include r(1200) {
+		display: none;
+	}
 	&__text {
 		margin-right: 16px;
 	}
@@ -1000,6 +1048,7 @@
 	}
 	&__btn {
 		height: 40px;
+		min-height: 40px;
 		padding-left: 30px;
 		padding-right: 30px;
 	}
