--- a/src/views/5-page.html
+++ b/src/views/5-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>2. Новинки</title>
+    <title>5. Каталог</title>
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
@@ -210,7 +210,48 @@
                                     </div>
                                     <div class="table__cell table__cell--10">
                                         <span class="table__mob-discript">Количество:</span>
-                                        Больше 10
+                                        Больше 10 шт.
+                                    </div>
+                                    <div class="table__cell table__cell--10">
+                                        <span class="table__mob-discript">Купить:<br></span>
+                                        <form action="" class="table-form">
+                                            <input type="text" class="table-form__input" value="1000">
+                                            <button class="table-form__btn">
+                                                <svg class="icon-svg">
+                                                    <use xlink:href="img/sprites/sprite.svg#icon-card-2"></use>
+                                                </svg>
+                                            </button>
+                                        </form>
+                                    </div>
+                                </div>
+                                <div class="table__line">
+                                    <div class="table__cell table__cell--10">
+                                        <span class="table__mob-discript">Артикул:</span>
+                                        39446
+                                    </div>
+                                    <div class="table__cell table__cell--35">
+                                        <a href="" class="table__link">
+                                            <span class="table__mob-discript">Наименование:</span>
+                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12140.120.61 Фреза концевая DIA
+                                        </a>
+                                    </div>
+                                    <div class="table__cell table__cell--10">
+                                        <span class="table__mob-discript">Декор:</span>
+                                        112.0271.333
+                                    </div>
+                                    <div class="table__cell table__cell--15">
+                                        <span class="table__mob-discript">Цена:</span>
+                                        <p class="table__text table__text--strike">
+                                            500 190 РУБ
+                                        </p>
+                                        <p class="table__price">
+                                            цена со скидкой <br>
+                                            <strong>500 550</strong> руб.
+                                        </p>
+                                    </div>
+                                    <div class="table__cell table__cell--10">
+                                        <span class="table__mob-discript">Количество:</span>
+                                        Больше 10 кг.
                                     </div>
                                     <div class="table__cell table__cell--10">
                                         <span class="table__mob-discript">Купить:<br></span>
@@ -292,48 +333,7 @@
                                     </div>
                                     <div class="table__cell table__cell--10">
                                         <span class="table__mob-discript">Количество:</span>
-                                        Больше 10
-                                    </div>
-                                    <div class="table__cell table__cell--10">
-                                        <span class="table__mob-discript">Купить:<br></span>
-                                        <form action="" class="table-form">
-                                            <input type="text" class="table-form__input" value="1000">
-                                            <button class="table-form__btn">
-                                                <svg class="icon-svg">
-                                                    <use xlink:href="img/sprites/sprite.svg#icon-card-2"></use>
-                                                </svg>
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                                <div class="table__line">
-                                    <div class="table__cell table__cell--10">
-                                        <span class="table__mob-discript">Артикул:</span>
-                                        39446
-                                    </div>
-                                    <div class="table__cell table__cell--35">
-                                        <a href="" class="table__link">
-                                            <span class="table__mob-discript">Наименование:</span>
-                                            140.120.61 Фреза концевая DIA D12/NL27/L70/S12140.120.61 Фреза концевая DIA
-                                        </a>
-                                    </div>
-                                    <div class="table__cell table__cell--10">
-                                        <span class="table__mob-discript">Декор:</span>
-                                        112.0271.333
-                                    </div>
-                                    <div class="table__cell table__cell--15">
-                                        <span class="table__mob-discript">Цена:</span>
-                                        <p class="table__text table__text--strike">
-                                            500 190 РУБ
-                                        </p>
-                                        <p class="table__price">
-                                            цена со скидкой <br>
-                                            <strong>500 550</strong> руб.
-                                        </p>
-                                    </div>
-                                    <div class="table__cell table__cell--10">
-                                        <span class="table__mob-discript">Количество:</span>
-                                        Больше 10
+                                        Больше 10 м.
                                     </div>
                                     <div class="table__cell table__cell--10">
                                         <span class="table__mob-discript">Купить:<br></span>
