--- a/src/views/6-page.html
+++ b/src/views/6-page.html
@@ -343,7 +343,7 @@
                             </p>
                             <div class="articles product-articles__articles">
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb resized">
+                                    <a href class="card__thumb">
                                         <div class="card__tags"></div>
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
@@ -425,7 +425,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb resized">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--blue">
@@ -511,7 +511,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb resized">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--orange">
@@ -597,7 +597,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb resized">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--red">
@@ -683,7 +683,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb resized">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
@@ -764,7 +764,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb resized">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
@@ -845,7 +845,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb resized">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
@@ -926,7 +926,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb resized">
+                                    <a href class="card__thumb">
                                         <img src="http://placehold.it/900x900" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
