--- a/src/views/7-page.html
+++ b/src/views/7-page.html
@@ -55,7 +55,7 @@
                         <div class="catalog__main">
                             <div class="articles">
                                 <a href="" class="item">
-                                    <div class="item__thumb resized">
+                                    <div class="item__thumb">
                                         <img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -63,7 +63,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb resized">
+                                    <div class="item__thumb">
                                         <img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -71,7 +71,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb resized">
+                                    <div class="item__thumb">
                                         <img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -79,7 +79,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb resized">
+                                    <div class="item__thumb">
                                         <img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -87,7 +87,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb resized">
+                                    <div class="item__thumb">
                                         <img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -95,7 +95,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb resized">
+                                    <div class="item__thumb">
                                         <img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -103,7 +103,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb resized">
+                                    <div class="item__thumb">
                                         <img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -111,7 +111,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb resized">
+                                    <div class="item__thumb">
                                         <img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -119,7 +119,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb resized">
+                                    <div class="item__thumb">
                                         <img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -127,7 +127,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb resized">
+                                    <div class="item__thumb">
                                         <img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -135,7 +135,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb resized">
+                                    <div class="item__thumb">
                                         <img src="http://placehold.it/900x900" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
