--- a/src/views/9-page.html
+++ b/src/views/9-page.html
@@ -145,7 +145,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="service__column service__column--editable service__column--8">
+                                    <div class="service__column service__column--sm-desktop-full service__column--editable service__column--8">
                                         <div class="grid__block mobile-order mobile-order--7">
                                             <div class="service-catalog">
                                                 <p class="title-small title-small--product service-catalog__title">
@@ -155,9 +155,9 @@
                                                 </p>
                                                 <div class="articles service-catalog__articles">
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb resized">
+                                                        <a href class="card__thumb">
                                                             <div class="card__tags"></div>
-                                                            <img src="http://placehold.it/900x600" alt="Название товара">
+                                                            <img src="http://placehold.it/900x900" alt="Название товара">
                                                         </a>
                                                         <a href="" class="card__title">
                                                             140.120.61 Фреза концевая DIA D12/NL27/L70/S12
@@ -237,8 +237,8 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb resized">
-                                                            <img src="http://placehold.it/900x600" alt="Название товара">
+                                                        <a href class="card__thumb">
+                                                            <img src="http://placehold.it/900x900" alt="Название товара">
                                                             <div class="card__tags">
                                                                 <span class="card__tag card__tag--blue">
                                                                     Новинка
@@ -323,8 +323,8 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb resized">
-                                                            <img src="http://placehold.it/900x600" alt="Название товара">
+                                                        <a href class="card__thumb">
+                                                            <img src="http://placehold.it/900x900" alt="Название товара">
                                                             <div class="card__tags">
                                                                 <span class="card__tag card__tag--orange">
                                                                     Акция
@@ -409,8 +409,8 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb resized">
-                                                            <img src="http://placehold.it/900x600" alt="Название товара">
+                                                        <a href class="card__thumb">
+                                                            <img src="http://placehold.it/900x900" alt="Название товара">
                                                             <div class="card__tags">
                                                                 <span class="card__tag card__tag--red">
                                                                     Распродажа
@@ -495,8 +495,8 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb resized">
-                                                            <img src="http://placehold.it/900x600" alt="Название товара">
+                                                        <a href class="card__thumb">
+                                                            <img src="http://placehold.it/900x900" alt="Название товара">
                                                         </a>
                                                         <a href="" class="card__title">
                                                             140.120.61 Фреза концевая DIA D12/NL27/L70/S12
@@ -568,8 +568,8 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb resized">
-                                                            <img src="http://placehold.it/900x600" alt="Название товара">
+                                                        <a href class="card__thumb">
+                                                            <img src="http://placehold.it/900x900" alt="Название товара">
                                                         </a>
                                                         <a href="" class="card__title">
                                                             140.120.61 Фреза концевая DIA D12/NL27/L70/S12
@@ -641,8 +641,8 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb resized">
-                                                            <img src="http://placehold.it/900x600" alt="Название товара">
+                                                        <a href class="card__thumb">
+                                                            <img src="http://placehold.it/900x900" alt="Название товара">
                                                         </a>
                                                         <a href="" class="card__title">
                                                             140.120.61 Фреза концевая DIA D12/NL27/L70/S12
@@ -714,8 +714,8 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb resized">
-                                                            <img src="http://placehold.it/900x600" alt="Название товара">
+                                                        <a href class="card__thumb">
+                                                            <img src="http://placehold.it/900x900" alt="Название товара">
                                                         </a>
                                                         <a href="" class="card__title">
                                                             140.120.61 Фреза концевая DIA D12/NL27/L70/S12
