--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Балтламинат</title>
+    <title>Test Балтламинат</title>
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
