--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -141,6 +141,7 @@
 	&__search {
 		flex-grow: 1;
 		margin-top: 20px;
+		width: 100%;
 	}
 	&__input {
 		box-sizing: border-box;
@@ -174,50 +175,69 @@
 .top-nav {
 	display: flex;
 	align-items: center;
-	&__home {
-		display: block;
-		margin-right: 26px;
-		padding: 9px;
-		@include r(1700) {
-			margin-right: 19px;
-		}
-		&:hover {
-			opacity: 0.7;
-		}
-		svg {
-			width: 18px;
-			height: 18px;
-		}
-	}
-	&__catalog {
-		display: flex;
-		align-items:center;
-		padding: 9px 13px;
-		cursor: pointer;
-		transition: 0.3s all;
-		text-transform: uppercase;
-		background: none;
-		margin-right: 24px;
-		color: $dark;
-		text-decoration: none;
-		@include r(1700) {
-			margin-right: 0px;
-		}
-		&:hover {
-			opacity: 0.7;
-		}
-		svg {
-			margin-right: 14px;
-			width: 18px;
-			height: 12px;
-		}
-	}
+	// &__home {
+	// 	display: flex;
+	// 	align-items:center;
+	// 	padding: 9px 13px;
+	// 	cursor: pointer;
+	// 	transition: 0.3s all;
+	// 	text-transform: uppercase;
+	// 	background: none;
+	// 	margin-right: 24px;
+	// 	color: $dark;
+	// 	text-decoration: none;
+	// 	@include r(1700) {
+	// 		margin-right: 0px;
+	// 	}
+	// 	&:hover {
+	// 		opacity: 0.7;
+	// 	}
+	// 	svg {
+	// 		margin-right: 14px;
+	// 		width: 16px;
+	// 		height: 16px;
+	// 		position: relative;
+	// 		top: -1px;
+	// 	}
+	// }
+	// &__catalog {
+	// 	display: flex;
+	// 	align-items:center;
+	// 	padding: 9px 13px;
+	// 	cursor: pointer;
+	// 	transition: 0.3s all;
+	// 	text-transform: uppercase;
+	// 	background: none;
+	// 	margin-right: 24px;
+	// 	color: $dark;
+	// 	text-decoration: none;
+	// 	@include r(1700) {
+	// 		margin-right: 0px;
+	// 	}
+	// 	&:hover {
+	// 		opacity: 0.7;
+	// 	}
+	// 	svg {
+	// 		margin-right: 14px;
+	// 		width: 18px;
+	// 		height: 12px;
+	// 	}
+	// }
 	&__link {
 		padding: 9px 13px;
 		margin-right: 24px;
 		text-transform: uppercase;
 		color: $dark;
 		text-decoration: none;
+		display: inline-flex;
+		align-items: center;
+		svg {
+			margin-right: 15px;
+		}
+		span {
+			position: relative;
+			top: 1px;
+		}
 		@include r(1700) {
 			margin-right: 0px;
 		}
