--- a/src/views/23-2-page.html
+++ b/src/views/23-2-page.html
@@ -284,102 +284,103 @@
 								Список арендаторов (1 этаж)
 							</p>
 							<div class="map__list-content">
-								<p class="map__list-item">
+								<!-- При клике на арендатора переходим на соответствующую страницу -->
+								<a href="#" class="map__list-item">
 									<strong>01</strong>
 									ART FLEX
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>02</strong>
 									ASKONA
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>03</strong>
 									BOXX
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>04</strong>
 									ART FLEX
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>05</strong>
 									ASKONA
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>06</strong>
 									BOXX
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>07</strong>
 									CINNO CILLINNI
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>08</strong>
 									EVRO DIVAN
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>09</strong>
 									GoodWill
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>10</strong>
 									CINNO CILLINNI
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>11</strong>
 									EVRO DIVAN
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>12</strong>
 									GoodWill
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>13</strong>
 									Hilding Anders 
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>14</strong>
 									Любимый дом
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>15</strong>
 									MOON
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="" class="map__list-item">
 									<strong>16</strong>
 									Hilding Anders 
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>17</strong>
 									Любимый дом
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>18</strong>
 									MOON
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>19</strong>
 									Hilding Anders 
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>20</strong>
 									Любимый дом
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>21</strong>
 									MOON
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>22</strong>
 									Hilding Anders 
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>23</strong>
 									Любимый дом
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>24</strong>
 									MOON
-								</p>
+								</a>
 							</div>
 						</div>
 						<div class="map__list  map-hidden" data-floorNavs="2">
@@ -387,102 +388,103 @@
 								Список арендаторов (2 этаж)
 							</p>
 							<div class="map__list-content">
-								<p class="map__list-item">
+								<!-- При клике на арендатора переходим на соответствующую страницу -->
+								<a href="#" class="map__list-item">
 									<strong>01</strong>
 									ART FLEX
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>02</strong>
 									ASKONA
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>03</strong>
 									BOXX
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>04</strong>
 									ART FLEX
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>05</strong>
 									ASKONA
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>06</strong>
 									BOXX
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>07</strong>
 									CINNO CILLINNI
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>08</strong>
 									EVRO DIVAN
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>09</strong>
 									GoodWill
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>10</strong>
 									CINNO CILLINNI
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>11</strong>
 									EVRO DIVAN
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>12</strong>
 									GoodWill
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>13</strong>
 									Hilding Anders 
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>14</strong>
 									Любимый дом
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>15</strong>
 									MOON
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="" class="map__list-item">
 									<strong>16</strong>
 									Hilding Anders 
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>17</strong>
 									Любимый дом
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>18</strong>
 									MOON
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>19</strong>
 									Hilding Anders 
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>20</strong>
 									Любимый дом
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>21</strong>
 									MOON
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>22</strong>
 									Hilding Anders 
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>23</strong>
 									Любимый дом
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>24</strong>
 									MOON
-								</p>
+								</a>
 							</div>
 						</div>
 						<div class="map__list  map-hidden" data-floorNavs="3">
@@ -490,102 +492,103 @@
 								Список арендаторов (3 этаж)
 							</p>
 							<div class="map__list-content">
-								<p class="map__list-item">
+								<!-- При клике на арендатора переходим на соответствующую страницу -->
+								<a href="#" class="map__list-item">
 									<strong>01</strong>
 									ART FLEX
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>02</strong>
 									ASKONA
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>03</strong>
 									BOXX
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>04</strong>
 									ART FLEX
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>05</strong>
 									ASKONA
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>06</strong>
 									BOXX
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>07</strong>
 									CINNO CILLINNI
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>08</strong>
 									EVRO DIVAN
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>09</strong>
 									GoodWill
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>10</strong>
 									CINNO CILLINNI
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>11</strong>
 									EVRO DIVAN
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>12</strong>
 									GoodWill
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>13</strong>
 									Hilding Anders 
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>14</strong>
 									Любимый дом
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>15</strong>
 									MOON
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="" class="map__list-item">
 									<strong>16</strong>
 									Hilding Anders 
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>17</strong>
 									Любимый дом
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>18</strong>
 									MOON
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>19</strong>
 									Hilding Anders 
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>20</strong>
 									Любимый дом
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>21</strong>
 									MOON
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>22</strong>
 									Hilding Anders 
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>23</strong>
 									Любимый дом
-								</p>
-								<p class="map__list-item">
+								</a>
+								<a href="#" class="map__list-item">
 									<strong>24</strong>
 									MOON
-								</p>
+								</a>
 							</div>
 						</div>
 					</div>
