--- a/src/views/36-page.html
+++ b/src/views/36-page.html
@@ -48,14 +48,14 @@
                                         </div>
                                     </div>
                                     <article class="lk-item">
-                                        <div class="lk-item__col lk-item__col--remove">
+                                        <!-- <div class="lk-item__col lk-item__col--remove">
                                             <button class="remove-all">
                                                 <svg class="icon-svg remove-all__icon">
                                                     <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
                                                 </svg>
                                             </button>
-                                        </div>
-                                        <div class="lk-item__col lk-item__col--checkbox">
+                                        </div> -->
+                                        <!-- <div class="lk-item__col lk-item__col--checkbox">
                                             <label class="lk-checkbox">
                                                 <input type="checkbox" name="question" class="lk-checkbox__input">
                                                 <div class="lk-checkbox__icon">
@@ -64,7 +64,7 @@
                                                     </svg>
                                                 </div>
                                             </label>
-                                        </div>
+                                        </div> -->
                                         <div class="lk-item__col lk-item__col--number">
                                             1
                                         </div>
@@ -114,7 +114,7 @@
                                         </div>
                                     </article>
                                     <article class="lk-item">
-                                        <div class="lk-item__col lk-item__col--remove">
+                                        <!-- <div class="lk-item__col lk-item__col--remove">
                                             <button class="remove-all">
                                                 <svg class="icon-svg remove-all__icon">
                                                     <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
@@ -130,7 +130,7 @@
                                                     </svg>
                                                 </div>
                                             </label>
-                                        </div>
+                                        </div> -->
                                         <div class="lk-item__col lk-item__col--number">
                                             1
                                         </div>
@@ -180,7 +180,7 @@
                                         </div>
                                     </article>
                                     <article class="lk-item">
-                                        <div class="lk-item__col lk-item__col--remove">
+                                        <!-- <div class="lk-item__col lk-item__col--remove">
                                             <button class="remove-all">
                                                 <svg class="icon-svg remove-all__icon">
                                                     <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
@@ -196,7 +196,7 @@
                                                     </svg>
                                                 </div>
                                             </label>
-                                        </div>
+                                        </div> -->
                                         <div class="lk-item__col lk-item__col--number">
                                             1
                                         </div>
