--- a/src/views/37-page.html
+++ b/src/views/37-page.html
@@ -76,7 +76,7 @@
                                                 </div>
                                             </div>
                                             <article class="lk-item">
-                                                <div class="lk-item__col lk-item__col--remove">
+                                                <!-- <div class="lk-item__col lk-item__col--remove">
                                                     <button class="remove-all">
                                                         <svg class="icon-svg remove-all__icon">
                                                             <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
@@ -92,7 +92,7 @@
                                                             </svg>
                                                         </div>
                                                     </label>
-                                                </div>
+                                                </div> -->
                                                 <div class="lk-item__col lk-item__col--number">
                                                     1
                                                 </div>
@@ -142,7 +142,7 @@
                                                 </div>
                                             </article>
                                             <article class="lk-item">
-                                                <div class="lk-item__col lk-item__col--remove">
+                                                <!-- <div class="lk-item__col lk-item__col--remove">
                                                     <button class="remove-all">
                                                         <svg class="icon-svg remove-all__icon">
                                                             <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
@@ -158,7 +158,7 @@
                                                             </svg>
                                                         </div>
                                                     </label>
-                                                </div>
+                                                </div> -->
                                                 <div class="lk-item__col lk-item__col--number">
                                                     1
                                                 </div>
@@ -208,7 +208,7 @@
                                                 </div>
                                             </article>
                                             <article class="lk-item">
-                                                <div class="lk-item__col lk-item__col--remove">
+                                                <!-- <div class="lk-item__col lk-item__col--remove">
                                                     <button class="remove-all">
                                                         <svg class="icon-svg remove-all__icon">
                                                             <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
@@ -224,7 +224,7 @@
                                                             </svg>
                                                         </div>
                                                     </label>
-                                                </div>
+                                                </div> -->
                                                 <div class="lk-item__col lk-item__col--number">
                                                     1
                                                 </div>
