--- a/src/views/40-page.html
+++ b/src/views/40-page.html
@@ -68,7 +68,7 @@
                                                 </div>
                                             </div>
                                             <article class="lk-item">
-                                                <div class="lk-item__col lk-item__col--remove">
+                                                <!-- <div class="lk-item__col lk-item__col--remove">
                                                     <button class="remove-all">
                                                         <svg class="icon-svg remove-all__icon">
                                                             <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
@@ -84,7 +84,7 @@
                                                             </svg>
                                                         </div>
                                                     </label>
-                                                </div>
+                                                </div> -->
                                                 <div class="lk-item__col lk-item__col--number">
                                                     1
                                                 </div>
@@ -134,7 +134,7 @@
                                                 </div>
                                             </article>
                                             <article class="lk-item">
-                                                <div class="lk-item__col lk-item__col--remove">
+                                                <!-- <div class="lk-item__col lk-item__col--remove">
                                                     <button class="remove-all">
                                                         <svg class="icon-svg remove-all__icon">
                                                             <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
@@ -150,7 +150,7 @@
                                                             </svg>
                                                         </div>
                                                     </label>
-                                                </div>
+                                                </div> -->
                                                 <div class="lk-item__col lk-item__col--number">
                                                     1
                                                 </div>
@@ -200,7 +200,7 @@
                                                 </div>
                                             </article>
                                             <article class="lk-item">
-                                                <div class="lk-item__col lk-item__col--remove">
+                                                <!-- <div class="lk-item__col lk-item__col--remove">
                                                     <button class="remove-all">
                                                         <svg class="icon-svg remove-all__icon">
                                                             <use xlink:href="img/sprites/sprite.svg#icon-remove-all"></use>
@@ -216,7 +216,7 @@
                                                             </svg>
                                                         </div>
                                                     </label>
-                                                </div>
+                                                </div> -->
                                                 <div class="lk-item__col lk-item__col--number">
                                                     1
                                                 </div>
