--- a/src/views/42-page.html
+++ b/src/views/42-page.html
@@ -253,9 +253,9 @@
                                                 </span>
                                             </p>
                                         </div>
-                                        <a href="" class="btn btn--green final-price__btn">
+                                        <!-- <a href="" class="btn btn--green final-price__btn">
                                             Оплатить
-                                        </a>
+                                        </a> -->
                                     </div>
                                 </div>
                             </div>
