--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	display: flex;
+	overflow-y: hidden;
 	&__main {
 		flex-grow: 1;
 		// margin-bottom: 100px;
