--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -5443,6 +5443,7 @@ i {
   justify-content: space-between;
   display: flex;
   overflow-y: hidden;
+  background-color: #ffffff;
 }
 
 .layout__main {
