--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -4,6 +4,7 @@
 	justify-content: space-between;
 	display: flex;
 	overflow-y: hidden;
+	background-color: $light;
 	&__main {
 		flex-grow: 1;
 		// margin-bottom: 100px;
